--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,10 @@
 # PostgreSQL
-jdbc.url=jdbc:postgresql://127.0.0.1:5432/idea_db
-jdbc.driver_class=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://127.0.0.1:5432/idea_db
+#jdbc.driver_class=org.postgresql.Driver
+#jdbc.username=postgres
+#jdbc.password=password
+#
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
+jdbc.driver=org.postgresql.Driver
 jdbc.username=postgres
 jdbc.password=password
